@@ -1,5 +1,5 @@
 ##fileformat=VCFv4.3
-##fileDate=14/04/2023
+##fileDate=25/04/2023
 ##source=AnnotSV
 ##InputFile=/gstock/LGM/analysisOfSV/AnnotSV/AnnotSV_3.3.4/share/doc/AnnotSV/Example/test.annotated.tsv
 ##FILTER=<ID=PASS,Description="Passed filter">
@@ -209,7 +209,7 @@
 ##contig=<ID=GL000229.1,length=19913,assembly=GRCh37>
 ##contig=<ID=GL000226.1,length=15008,assembly=GRCh37>
 ##contig=<ID=GL000207.1,length=4262,assembly=GRCh37>
-##reference=file:/home/geoffroy/analysisOfSV/AnnotSV/AnnotSV_dev/share/AnnotSV/Annotations_Human/BreakpointsAnnotations/GCcontent/GRCh37/GRCh37_chromFa.fasta
+##reference=file:/gstock/LGM/analysisOfSV/AnnotSV/AnnotSV_3.3.4/share/AnnotSV/Annotations_Human/BreakpointsAnnotations/GCcontent/GRCh37/GRCh37_chromFa.fasta
 #CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO	FORMAT	NA
 1	149041934	.	T	<DEL>	.	PASS	AnnotSV_ID=1_149041934_149209289_DEL_1|1_149041934_149209289_DEL_1|1_149041934_149209289_DEL_1;SV_chrom=1|1|1;SV_start=149041934|149041934|149041934;SV_end=149209289|149209289|149209289;SV_length=-167355|-167355|-167355;SV_type=DEL|DEL|DEL;Biologist_annotation=.|.|.;Biologist_ranking=Benign|Benign|Benign;Annotation_mode=full&split;CytoBand=q21.2|q21.2|q21.2;Gene_name=NBPF25P,RNVU1-17|NBPF25P|RNVU1-17;Gene_count=2.0|.|.;Tx=.|NR_104217|NR_104078;Tx_start=.|148250249.0|149194105.0;Tx_end=.|149109725.0|149194269.0;Overlapped_tx_length=.|67792.0|164.0;Overlapped_CDS_length=.|0.0|0.0;Overlapped_CDS_percent=.|0.0|0.0;Frameshift=.|no|no;Exon_count=.|18.0|1.0;Location=.|txStart-intron2|txStart-txEnd;Location2=.|UTR|UTR;Dist_nearest_SS=.|67049.0|.;Nearest_SS_type=.|5'|.;Intersect_start=.|149041933.0|149194105.0;Intersect_end=.|149109725.0|149194269.0;RE_gene=.|.|.;P_gain_phen=.|.|.;P_gain_hpo=.|.|.;P_gain_source=.|.|.;P_gain_coord=.|.|.;P_loss_phen=.|.|.;P_loss_hpo=.|.|.;P_loss_source=.|.|.;P_loss_coord=.|.|.;P_ins_phen=.|.|.;P_ins_hpo=.|.|.;P_ins_source=.|.|.;P_ins_coord=.|.|.;po_P_gain_phen=.|.|.;po_P_gain_hpo=.|.|.;po_P_gain_source=dbVar:nssv15156967,dbVar:nssv15156970,dbVar:nssv15149867,nssv15151118,dbVar:nssv15140065,dbVar:nssv15127264,dbVar:nssv15140622,dbVar:nssv15142143,dbVar:nssv15139736,dbVar:nssv15136257,dbVar:nssv15137789,dbVar:nssv15135435,dbVar:nssv15132352,dbVar:nssv15127572,dbVar:nssv16736643,dbVar:nssv15135787,dbVar:nssv15121048,dbVar:nssv15132855|.|.;po_P_gain_coord=1:47852-249228449,1:82155-249218992,1:849468-249224684,1:143500224-149763815,1:143544036-149754161,1:143753741-151399970,1:143932351-149801420,1:144927579-153223600,1:145425396-149091187,1:145425396-149699420,1:145425396-149768855,1:145451330-156102366,1:145764500-249233096,1:145818703-149378266,1:146500973-149433185,1:147400638-149813625,1:147411535-149699420|.|.;po_P_gain_percent=0.07,0.07,0.07,2.67,2.69,2.19,2.85,2.02,1.34,3.92,3.85,1.57,0.16,4.70,5.71,6.94,7.31|.|.;po_P_loss_phen=.|.|.;po_P_loss_hpo=.|.|.;po_P_loss_source=dbVar:nssv15132982,dbVar:nssv15133379,dbVar:nssv15137633,dbVar:nssv15137132,dbVar:nssv15136850,dbVar:nssv15132445,dbVar:nssv15137470,dbVar:nssv15135169,dbVar:nssv15129680,dbVar:nssv15157514,dbVar:nssv15133691,dbVar:nssv15132524,dbVar:nssv15137778|.|.;po_P_loss_coord=1:143721527-149232481,1:145388356-149418924,1:145415157-149433207,1:145626238-149244468,1:145626238-149453964,1:145655993-149232481,1:145747243-149155026,1:145987157-149232481,1:146053395-249233096,1:146089269-149376652,1:146143190-149232481,1:146143190-149699420,1:146507650-149433207|.|.;po_P_loss_percent=3.04,4.15,4.17,4.63,4.37,4.68,3.32,5.16,0.16,5.09,5.42,4.71,5.72|.|.;P_snvindel_nb=.|.|.;P_snvindel_phen=.|.|.;B_gain_source=DDD:2784,DDD:2806,TS40:ISCA-37469,dgv4e203,nsv514006|DDD:2784,DDD:2806,TS40:ISCA-37469,dgv4e203,nsv514006|1000g,DDD:2784,DDD:2806,TS40:ISCA-37469,dgv4e203,esv3587470,nsv514006;B_gain_coord=1:149034710-149405578,1:149036513-149244464,1:147929337-149801433,1:148050780-149739249,1:148867552-149768855|1:149034710-149405578,1:149036513-149244464,1:147929337-149801433,1:148050780-149739249,1:148867552-149768855|1:149034710-149405578,1:149036513-149244464,1:149151839-149203736,1:149151839-149203736,1:147929337-149801433,1:148050780-149739249,1:148867552-149768855;B_gain_AFmax=0.08|0.08|0.08;B_loss_source=DDD:2784,DDD:2806,HI40:ISCA-37469,dgv375n100,dgv4e203,esv2422083,esv3894145|DDD:2784,DDD:2806,HI40:ISCA-37469,dgv375n100,dgv4e203,esv2422083,esv3894145,gnomAD-SV_v2.1_DEL_1_7835|1000g,DDD:2784,DDD:2806,DDD:2814,HI40:ISCA-37469,HI40:ISCA-46570,dgv375n100,dgv4e203,esv2422083,esv3587469,esv3894145,gnomAD-SV_v2.1_DEL_1_7835,gnomAD-SV_v2.1_DEL_1_7844;B_loss_coord=1:149034710-149405578,1:149036513-149278459,1:149036525-149256691,1:149039121-149211496,1:147929337-149801433,1:148050780-149739249,1:148867552-149768855|1:149034710-149405578,1:149035900-149204000,1:149036513-149278459,1:149036525-149256691,1:149039121-149211496,1:147929337-149801433,1:148050780-149739249,1:148867552-149768855|1:149034710-149405578,1:149035900-149204000,1:149036513-149278459,1:149036525-149256691,1:149039121-149211496,1:149134000-149204000,1:149145234-149244654,1:149151839-149203736,1:149151839-149203736,1:149152065-149204067,1:147929337-149801433,1:148050780-149739249,1:148867552-149768855;B_loss_AFmax=0.3041|0.3041|0.3041;B_ins_source=.|.|.;B_ins_coord=.|.|.;B_ins_AFmax=.|.|.;B_inv_source=.|.|.;B_inv_coord=.|.|.;B_inv_AFmax=.|.|.;po_B_gain_allG_source=.|.|.;po_B_gain_allG_coord=.|.|.;po_B_gain_someG_source=1:149207861-149218152_esv3587472,1:149036513-149244464_nsv514006,1:149071635-149169501_esv3587467,1:149151839-149203736_esv3587470,1:148050780-149739249_DDD:2784,|.|.;po_B_gain_someG_coord=1:149207861-149218152_1000g,1:149034710-149405578_DDD:2806,1:149071635-149169501_1000g,1:149151839-149203736_1000g,1:147929337-149801433_dgv4e203,1:148867552-149768855_TS40:ISCA-37469|.|.;po_B_loss_allG_source=.|.|.;po_B_loss_allG_coord=.|.|.;po_B_loss_someG_source=1:149090850-149092378_esv3587468,1:149151330-149151379_CMRI:18_pbsv.DEL.2013,1:149064634-149080509_gnomAD-SV_v2.1_DEL_1_7837,1:149207861-149218152_1000g,1:149034710-149405578_DDD:2806,1:149036513-149278459_dgv375n100,1:149039121-149211496_esv3894145,1:149071635-149169501_esv3587466,1:149145234-149244654_DDD:2814,1:149151839-149203736_esv3587469,1:149202746-149436842_DDD:2817,1:148050780-149739249_DDD:2784,|.|.;po_B_loss_someG_coord=1:149090850-149092378_1000g,1:149132818-149132944_CMRI:66_pbsv.DEL.2036,1:149035900-149053900_gnomAD-SV_v2.1_DEL_1_7834,1:149207852-149218151_HI40:ISCA-46571,1:149207861-149218152_esv3587471,1:149035900-149204000_gnomAD-SV_v2.1_DEL_1_7835,1:149036525-149256691_esv2422083,1:149071635-149169501_1000g,1:149134000-149204000_gnomAD-SV_v2.1_DEL_1_7844,1:149151839-149203736_1000g,1:149152065-149204067_HI40:ISCA-46570,1:147929337-149801433_dgv4e203,1:148867552-149768855_HI40:ISCA-37469|.|.;Cosmic_ID=.|.|.;Cosmic_mut_typ=.|.|.;GC_content_left=0.455|.|.;GC_content_right=0.44|.|.;Repeat_coord_left=.|.|.;Repeat_type_left=.|.|.;Repeat_coord_right=1:149209192-149209220|.|.;Repeat_type_right=(GA)n|.|.;Gap_left=.|.|.;Gap_right=.|.|.;SegDup_left=1:149035966-149106186|.|.;SegDup_right=1:149191324-149214601,1:149200001-149214601|.|.;ENCODE_blacklist_left=1:147832001-149058800|.|.;ENCODE_blacklist_characteristics_left=High_Signal_Region|.|.;ENCODE_blacklist_right=.|.|.;ENCODE_blacklist_characteristics_right=.|.|.;ACMG=.|.|.;HI=.|.|.;TS=.|.|.;DDD_HI_percent=.|.|.;ExAC_delZ=.|.|.;ExAC_dupZ=.|.|.;ExAC_cnvZ=.|.|.;ExAC_synZ=.|.|.;ExAC_misZ=.|.|.;GenCC_disease=.|.|.;GenCC_moi=.|.|.;GenCC_classification=.|.|.;GenCC_pmid=.|.|.;OMIM_ID=.|.|.;OMIM_phenotype=.|.|.;OMIM_inheritance=.|.|.;OMIM_morbid=.|.|.;OMIM_morbid_candidate=.|.|.;LOEUF_bin=.|.|.;GnomAD_pLI=.|.|.;ExAC_pLI=.|.|.;AnnotSV_ranking_score=-1.0|.|.;AnnotSV_ranking_criteria=1A_(cf_Gene_count,_RE_gene,_+0.00),2F/4O_(cf_B_loss_source,_-1.00),2B_(cf_po_P_loss_source,_HI_and_OMIM_morbid,_+0.00),3A_(2_genes,_+0.00),5F_(+0.00)|.|.;ACMG_class=1|full=1|full=1	GT	1/.
 1	196756232	.	A	<DEL>	.	PASS	AnnotSV_ID=1_196756232_196799302_DEL_1|1_196756232_196799302_DEL_1|1_196756232_196799302_DEL_1;SV_chrom=1|1|1;SV_start=196756232|196756232|196756232;SV_end=196799302|196799302|196799302;SV_length=-43070|-43070|-43070;SV_type=DEL|DEL|DEL;Biologist_annotation=.|.|.;Biologist_ranking=Benign|Benign|Benign;Annotation_mode=full&split;CytoBand=q31.3|q31.3|q31.3;Gene_name=CFHR1,CFHR3|CFHR1|CFHR3;Gene_count=2.0|.|.;Tx=.|NM_002113|NM_021023;Tx_start=.|196788860.0|196743969.0;Tx_end=.|196801319.0|196764537.0;Overlapped_tx_length=.|10442.0|8306.0;Overlapped_CDS_length=.|607.0|563.0;Overlapped_CDS_percent=.|61.0|56.0;Frameshift=.|yes|yes;Exon_count=.|6.0|6.0;Location=.|txStart-intron4|intron3-txEnd;Location2=.|5'UTR-CDS|CDS-3'UTR;Dist_nearest_SS=.|327.0|1114.0;Nearest_SS_type=.|3'|3';Intersect_start=.|196788860.0|196756231.0;Intersect_end=.|196799302.0|196764537.0;RE_gene=ASPM_(morbid/RE=EA_enhancer),CFH_(morbid/RE=GH_Promoter/Enhancer)|.|.;P_gain_phen=.|.|.;P_gain_hpo=.|.|.;P_gain_source=.|.|.;P_gain_coord=.|.|.;P_loss_phen=.|.|.;P_loss_hpo=.|.|.;P_loss_source=dbVar:nssv15121100|.|.;P_loss_coord=1:196757279-196796716|.|.;P_ins_phen=.|.|.;P_ins_hpo=.|.|.;P_ins_source=.|.|.;P_ins_coord=.|.|.;po_P_gain_phen=.|.|.;po_P_gain_hpo=.|.|.;po_P_gain_source=dbVar:nssv15156967,dbVar:nssv15156970,dbVar:nssv15149867,nssv15151118,dbVar:nssv15127572,dbVar:nssv15777262,dbVar:nssv15169967,dbVar:nssv15146388,dbVar:nssv15151024|.|.;po_P_gain_coord=1:47852-249228449,1:82155-249218992,1:849468-249224684,1:145764500-249233096,1:182388774-249111240,1:185644664-221698833,1:187113114-224487119,1:195483440-249213000|.|.;po_P_gain_percent=0.02,0.02,0.02,0.04,0.06,0.12,0.12,0.08|.|.;po_P_loss_phen=.|.|.;po_P_loss_hpo=.|.|.;po_P_loss_source=dbVar:nssv15129680,dbVar:nssv16207750,dbVar:nssv15146573,dbVar:nssv15151287,dbVar:nssv17970297,dbVar:nssv17970308,dbVar:nssv15146667,dbVar:nssv15154062,dbVar:nssv15134156,dbVar:nssv15146075,dbVar:nssv15119768|.|.;po_P_loss_coord=1:146053395-249233096,1:177551194-199599056,1:179002041-199694025,1:179011315-199022759,1:179073387-200192265,1:179413480-201764737,1:189003615-199584994,1:195089819-197443021,1:195483440-197865624,1:196712877-196797546,1:196722207-196808505|.|.;po_P_loss_percent=0.04,0.20,0.21,0.22,0.20,0.19,0.41,1.83,1.81,48.80,49.91|.|.;P_snvindel_nb=.|.|.;P_snvindel_phen=.|.|.;B_gain_source=DDD:3693|DDD:3693|DDD:3693;B_gain_coord=1:196724161-196912840|1:196724161-196912840|1:196724161-196912840;B_gain_AFmax=0.1822|0.1822|0.1822;B_loss_source=1000g,DDD:3692,DDD:3693,DDD:3695,dgv11e55,dgv6e203,dgv87e199,esv2421560,esv3588469,nsv514031,nsv517662|1000g,DDD:3692,DDD:3693,DDD:3695,DDD:3706,DDD:3707,DDD:3712,dgv11e55,dgv6e203,dgv87e199,esv2421560,esv3588469,esv3588478,nsv514031,nsv517662|1000g,DDD:3692,DDD:3693,DDD:3695,DDD:3698,dgv11e55,dgv6e203,dgv87e199,esv2421560,esv3588469,esv3588471,gnomAD-SV_v2.1_DEL_1_10680,nsv514031,nsv517662;B_loss_coord=1:196711068-196937536,1:196719268-196810043,1:196722346-196822692,1:196723048-196815791,1:196724161-196912840,1:196727851-196939719,1:196728878-196808865,1:196728878-196808865,1:196731149-196901753,1:196733402-196813850,1:196738898-196801697|1:196785120-196821192,1:196711068-196937536,1:196719268-196810043,1:196722346-196822692,1:196723048-196815791,1:196724161-196912840,1:196727851-196939719,1:196728878-196808865,1:196728878-196808865,1:196731149-196901753,1:196733402-196813850,1:196738898-196801697,1:196773003-196909196,1:196777327-196902217,1:196782356-196903873,1:196782356-196903873|1:196711068-196937536,1:196719268-196810043,1:196722346-196822692,1:196723048-196815791,1:196724161-196912840,1:196727851-196939719,1:196728878-196808865,1:196728878-196808865,1:196729000-196789200,1:196731149-196901753,1:196733402-196813850,1:196735896-196764940,1:196735896-196764940,1:196738624-196771280,1:196738898-196801697;B_loss_AFmax=0.4486|0.4486|0.4486;B_ins_source=.|.|.;B_ins_coord=.|.|.;B_ins_AFmax=.|.|.;B_inv_source=.|.|.;B_inv_coord=.|.|.;B_inv_AFmax=.|.|.;po_B_gain_allG_source=.|.|.;po_B_gain_allG_coord=.|.|.;po_B_gain_someG_source=1:196779204-196779204_1000g,1:196792551-196801251_DDD:3714,1:196724161-196912840_DDD:3693|.|.;po_B_gain_someG_coord=1:196761371-196761371_1000g,1:196780929-196780929_1000g,1:196748312-196757828_DDD:3701|.|.;po_B_loss_allG_source=.|.|.;po_B_loss_allG_coord=.|.|.;po_B_loss_someG_source=1:196772366-196774588_esv3588475,1:196782000-196788000_gnomAD-SV_v2.1_DEL_1_10685,1:196748312-196757828_DDD:3701,1:196785120-196821192_DDD:3712,1:196711068-196937536_nsv517662,1:196722346-196822692_dgv87e199,1:196724161-196912840_DDD:3693,1:196728878-196808865_1000g,1:196729000-196789200_gnomAD-SV_v2.1_DEL_1_10680,1:196733402-196813850_DDD:3695,1:196735896-196764940_esv3588471,1:196738898-196801697_nsv514031,1:196777327-196902217_DDD:3707,1:196782356-196903873_esv3588478|.|.;po_B_loss_someG_coord=1:196772366-196774588_1000g,1:196772800-196779400_gnomAD-SV_v2.1_DEL_1_10684,1:196798566-196802072_DDD:3720,1:196772602-196794300_DDD:3705,1:196790200-196805500_gnomAD-SV_v2.1_DEL_1_10686,1:196719268-196810043_DDD:3692,1:196723048-196815791_esv2421560,1:196727851-196939719_dgv6e203,1:196728878-196808865_esv3588469,1:196731149-196901753_dgv11e55,1:196735896-196764940_1000g,1:196738624-196771280_DDD:3698,1:196773003-196909196_DDD:3706,1:196782356-196903873_1000g|.|.;Cosmic_ID=1057190,1061944,1065487,2085508|1061944|.;Cosmic_mut_typ=gain|gain|.;GC_content_left=0.35|.|.;GC_content_right=0.285|.|.;Repeat_coord_left=.|.|.;Repeat_type_left=.|.|.;Repeat_coord_right=1:196797933-196799242|.|.;Repeat_type_right=L1MDa|.|.;Gap_left=.|.|.;Gap_right=.|.|.;SegDup_left=1:196756102-196796319|.|.;SegDup_right=1:196796320-196825045|.|.;ENCODE_blacklist_left=.|.|.;ENCODE_blacklist_characteristics_left=.|.|.;ENCODE_blacklist_right=.|.|.;ENCODE_blacklist_characteristics_right=.|.|.;ACMG=.|.|.;HI=.|.|.;TS=.|.|.;DDD_HI_percent=98.26|92.58|98.26;ExAC_delZ=.|.|.;ExAC_dupZ=.|.|.;ExAC_cnvZ=.|.|.;ExAC_synZ=1.07662990621103|1.07662990621103|0.6684477327677;ExAC_misZ=1.30887789301822|1.30887789301822|0.697024247535932;GenCC_disease=.|dense_deposit_disease,hemolytic_uremic_syndrome,_atypical,_susceptibility_to,_1|.;GenCC_moi=.|AD,AR|.;GenCC_classification=.|Limited,Supportive|.;GenCC_pmid=.|23728178[PMID]|.;OMIM_ID=134371,605336|134371|605336;OMIM_phenotype=.|(Hemolytic_uremic_syndrome,_atypical,_susceptibility_to),_235400_(3)_AR,AD,(Macular_degeneration,_age-related,_reduced_risk_of),_603075_(3)_AD|(Hemolytic_uremic_syndrome,_atypical,_susceptibility_to),_235400_(3)_AR,AD,(Macular_degeneration,_age-related,_reduced_risk_of),_603075_(3)_AD;OMIM_inheritance=.|AD,AR,AD|AD,AR,AD;OMIM_morbid=.|.|.;OMIM_morbid_candidate=yes|yes|yes;LOEUF_bin=8.0|8.0|8.0;GnomAD_pLI=2.6297e-08|2.6297e-08|1.72e-11;ExAC_pLI=0.00090932|0.00090932|1.219e-05;AnnotSV_ranking_score=1.0|.|.;AnnotSV_ranking_criteria=1A_(cf_Gene_count,_RE_gene,_+0.00),2A_(cf_P_loss_source,_+1.00),3A_(2_genes,_+0.00),5F_(+0.00)|.|.;ACMG_class=5|full=5|full=5	GT	1/.
